Fixed clear button position on mobile

--- a/src/Components/Filter/Filter.module.sass
+++ b/src/Components/Filter/Filter.module.sass
@@ -55,15 +55,10 @@ $bg-img-mobile: url(./bg-header-mobile.svg)
         border: none
         text-decoration: underline
         cursor: pointer
-        position: absolute
-        left: 90%
-        top:40%
+        align-self: center
 
 @media only screen and (max-width: 900px) 
         .FilterContainer
             padding: 0 5%
-
-            button
-                left: 80%
 
 
